base of receiver

--- a/OSLab4/OSLab4/Receiver/CMakeLists.txt
+++ b/OSLab4/OSLab4/Receiver/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (Receiver "receiver.h" "receiver.cpp")
+add_executable (Receiver "receiver.h" "receiver.cpp" "process/process_manager.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Receiver PROPERTY CXX_STANDARD 20)
