--- a/сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/CMakeLists.txt
+++ b/сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (OScolloquimNumberOperations "OScolloquimNumberOperations.cpp" "OScolloquimNumberOperations.h" "entities/opercode.cpp" "entities/file/filemanager.h" "entities/file_data/file_data.h" "entities/path_maker/path_maker.h" "entities/thread_manager/thread_manager.h" "entities/action_processor/action_processor.h" "entities/data_processor/data_processor.h" "entities/consts/regexpr.cpp" "entities/payload_manipulator/payload_manipulator.h")
+add_executable (OScolloquimNumberOperations "OScolloquimNumberOperations.cpp" "OScolloquimNumberOperations.h" "entities/action_processor/opercode.cpp" "entities/file/filemanager.h" "entities/file_data/file_data.h" "entities/path_maker/path_maker.h" "entities/action_processor/action_processor.h" "entities/data_processor/data_processor.h" "entities/consts/regexpr.cpp" "entities/payload_manipulator/payload_manipulator.h" "entities/thread_manager/thread_manager.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET OScolloquimNumberOperations PROPERTY CXX_STANDARD 20)
