--- a/colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/CMakeLists.txt
+++ b/colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable (
 	OScolloquiumMatrixOperations
 	"OScolloquiumMatrixOperations.cpp" "OScolloquiumMatrixOperations.h"
 	 "matrix/matrix.cpp" "matrix/matrixCalculator.cpp" 
- "matrix/thread/calculateThread.cpp" "matrix/matrixTaskPool.cpp" "matrix/matrixTask.cpp" "matrix/matrixInputTask.cpp" "matrix/file/matrixFileReader.cpp" "matrix/validator/matrixValidator.cpp" "matrix/validator/matrixSizeValidator.cpp")
+ "matrix/thread/calculateThread.cpp" "matrix/matrixTaskPool.cpp" "matrix/matrixTask.cpp" "matrix/matrixInputTask.cpp" "matrix/file/matrixFileReader.cpp" "matrix/validator/matrixValidator.cpp" "matrix/validator/matrixSizeValidator.cpp" "matrix/manager/matrixManager.cpp" "matrix/thread/threadConsts.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET OScolloquiumMatrixOperations PROPERTY CXX_STANDARD 20)
