--- a/OSLab1/Reporter/CMakeLists.txt
+++ b/OSLab1/Reporter/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (Reporter "Reporter.cpp" "Reporter.h")
+add_executable (Reporter "Reporter.cpp" "Reporter.h" "EmployeeSalary.h" "SalaryCalculator.h" "NegativeNumberException.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Reporter PROPERTY CXX_STANDARD 20)
