--- a/OSLab2/main/CMakeLists.txt
+++ b/OSLab2/main/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (main "main.cpp" "main.h")
+add_executable (main "main.cc" "main.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET main PROPERTY CXX_STANDARD 20)
