--- a/OSLab1/CMakeLists.txt
+++ b/OSLab1/CMakeLists.txt
@@ -17,3 +17,27 @@ add_subdirectory ("Creator")
 add_subdirectory ("Entities")
 add_subdirectory ("Main")
 add_subdirectory ("Reporter")
+
+
+# Google Test
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+add_executable(
+  projectTests
+  "Tests/reporter_test.cpp"
+ "Tests/salary_calc_test.cpp")
+target_link_libraries(
+  projectTests
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(projectTests)
