--- a/.github/workflows/cmake-action.yml
+++ b/.github/workflows/cmake-action.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: L1
-    - run: cd OSLab1
+      run: cd OSLab1
     - name: Building build files
       run: cmake -S . -B build
     - name: Building
