--- a/OSLab1/Entities/CMakeLists.txt
+++ b/OSLab1/Entities/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_library (Entities  "Entities.cpp" "Entities.h" "Entities (2).h")
+add_library (Entities  "Entities.cpp" "Entities.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Entities PROPERTY CXX_STANDARD 20)
