--- a/.github/workflows/cmake-action.yml
+++ b/.github/workflows/cmake-action.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Building
       run: cd OSLab1 && cmake -S . -B build && cmake --build build
     - name: Running tests
-      run: cd build && ctest
+      run: cd OSLab1 && cd build && ctest
 
