testing coverage upd

--- a/OSLab2/CMakeLists.txt
+++ b/OSLab2/CMakeLists.txt
@@ -16,3 +16,26 @@ add_subdirectory ("main")
 add_subdirectory ("average")
 add_subdirectory ("min_max")
 add_subdirectory ("entities")
+
+# Google Test
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+
+enable_testing()
+add_executable(
+  projectTests
+  "Tests/min_max_test.cpp" "Tests/average_test.cpp" "Tests/value_gen_functions.h" )
+target_link_libraries(
+  projectTests
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(projectTests)
